Making video full width

--- a/style.css
+++ b/style.css
@@ -5,11 +5,36 @@
 }
 
 .app {
-    height: 100vh;
+    position: relative;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    height: 100vh;
 }
+.vid-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    /* background-color: gold; */
+
+}
+
+.video-file {
+    /* position: absolute;
+    top: 50%;
+    left: 50%; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+    /* transform: translate(-50%, -50%); */
+    /* z-index: -5; */
+}
+
+
 
 .time-select, 
 .sound-picker,
@@ -20,6 +45,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    z-index: 5;
 }
 
 .player-container {
@@ -44,13 +70,15 @@
     font-size: 50px;
 }
 
-video {
+
+
+/* video {
     position: absolute;
     top: 0%;
     left: 0%;
     width: 100%;
     z-index: -5;
-}
+} */
 
 .time-select button, 
 .sound-picker button {
@@ -124,7 +152,7 @@ video {
 } 
 
 .bgChange {
-    background: transparent;
+    background: #ffa500;
 }
 
 .sound-picker button img {
